mugen-x86/logs_failed/easymock/oe_test_easymock_mock_abnormal/2023-06-06-21_04_08.log
+ source ../common/common_easymock.sh
++ source /root/mugen-riscv/libs/locallibs/common_lib.sh
+++ python3 --version
+++ '[' 0 -eq 0 ']'
+++ source /root/mugen-riscv/libs/locallibs/common_lib_python.sh
+ main
++ type -t post_test
+ '[' -n function ']'
+ trap post_test EXIT INT HUP TERM
+ rpm -qa
+ grep expect
++ type -t config_params
+ '[' -n '' ']'
++ type -t pre_test
+ '[' -n function ']'
+ pre_test
+ LOG_INFO 'Start to prepare the test environment.'
+ message='Start to prepare the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start to prepare the test environment.'
Tue Jun  6 21:04:24 2023 - INFO  - Start to prepare the test environment.
+ deploy_env
+ DNF_INSTALL 'easymock junit'
+ pkgs='easymock junit'
+ node=1
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs 'easymock junit' --node 1 --tempfile ''
Tue Jun  6 21:04:50 2023 - INFO  - pkgs:(easymock junit) is already installed
+ tmpfile2=
+ '[' -z '' ']'
+ tmpfile=
++ grep 'java-.*-openjdk'
++ rpm -qa 'java*'
++ awk -F - '{print $2}'
+ java_version='1.8.0
1.8.0
1.8.0'
+ DNF_INSTALL java-1.8.0 1.8.0 1.8.0-devel
+ pkgs=java-1.8.0
+ node=1.8.0
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen-riscv/libs/locallibs/rpm_manage.py install --pkgs java-1.8.0 --node 1.8.0 --tempfile ''
usage: rpm_manage.py install|remove [-h] [--node NODE] [--pkgs PKG] [--tempfile TEPMFILE]
rpm_manage.py: error: argument --node: invalid int value: '1.8.0'
+ tmpfile2=
+ '[' -z '' ']'
+ tmpfile=
+ LOG_INFO 'End to prepare the test environment.'
+ message='End to prepare the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End to prepare the test environment.'
Tue Jun  6 21:05:08 2023 - INFO  - End to prepare the test environment.
++ type -t run_test
+ '[' -n function ']'
+ run_test
+ LOG_INFO 'Start to run test.'
+ message='Start to run test.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start to run test.'
Tue Jun  6 21:05:09 2023 - INFO  - Start to run test.
+ compile_java
++ basename -a ./BaseDao.java ./BaseService.java ./BaseTest.java
+ params='BaseDao.java
BaseService.java
BaseTest.java'
+ javac -classpath '/usr/share/java/*:/usr/share/java/hamcrest/*:' -d . BaseDao.java BaseService.java BaseTest.java
BaseTest.java:1: error: package junit.framework does not exist
import junit.framework.TestCase;
                      ^
BaseTest.java:2: error: package org.easymock does not exist
import org.easymock.EasyMock;
                   ^
BaseTest.java:3: error: package org.junit does not exist
import org.junit.Test;
                ^
BaseTest.java:6: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BaseTest
BaseTest.java:8: error: cannot find symbol
        BaseDao baseDaoMock= EasyMock.createMock(BaseDao.class);
                             ^
  symbol:   variable EasyMock
  location: class BaseTest
BaseTest.java:10: error: cannot find symbol
        EasyMock.expect(baseDaoMock.queryById(EasyMock.anyObject())).andThrow(runtimeException);
                                              ^
  symbol:   variable EasyMock
  location: class BaseTest
BaseTest.java:10: error: cannot find symbol
        EasyMock.expect(baseDaoMock.queryById(EasyMock.anyObject())).andThrow(runtimeException);
        ^
  symbol:   variable EasyMock
  location: class BaseTest
BaseTest.java:11: error: cannot find symbol
	EasyMock.replay(baseDaoMock);
	^
  symbol:   variable EasyMock
  location: class BaseTest
8 errors
+ CHECK_RESULT 1
+ actual_result=1
+ expect_result=0
+ mode=0
+ error_log=
+ '[' -z 1 ']'
+ '[' 0 -eq 0 ']'
+ test 1x '!=' 0x
+ test -n ''
+ (( exec_result++ ))
+ LOG_ERROR 'oe_test_easymock_mock_abnormal.sh line 29'
+ message='oe_test_easymock_mock_abnormal.sh line 29'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level error --message 'oe_test_easymock_mock_abnormal.sh line 29'
Tue Jun  6 21:05:28 2023 - ERROR - oe_test_easymock_mock_abnormal.sh line 29
+ return 0
+ execute_java
+ grep 'The id is not exist'
++ basename ./BaseTest.java
+ testname=BaseTest.java
+ java -classpath '/usr/share/java/*:/usr/share/java/hamcrest/*:' org.junit.runner.JUnitCore BaseTest
Error: Could not find or load main class org.junit.runner.JUnitCore
+ CHECK_RESULT 1
+ actual_result=1
+ expect_result=0
+ mode=0
+ error_log=
+ '[' -z 1 ']'
+ '[' 0 -eq 0 ']'
+ test 1x '!=' 0x
+ test -n ''
+ (( exec_result++ ))
+ LOG_ERROR 'oe_test_easymock_mock_abnormal.sh line 31'
+ message='oe_test_easymock_mock_abnormal.sh line 31'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level error --message 'oe_test_easymock_mock_abnormal.sh line 31'
Tue Jun  6 21:05:32 2023 - ERROR - oe_test_easymock_mock_abnormal.sh line 31
+ return 0
+ LOG_INFO 'End to run test.'
+ message='End to run test.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End to run test.'
Tue Jun  6 21:05:34 2023 - INFO  - End to run test.
+ CASE_RESULT 0
+ case_re=0
+ test -z 2
+ test 2 -gt 0
+ LOG_ERROR 'failed to execute the case.'
+ message='failed to execute the case.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level error --message 'failed to execute the case.'
Tue Jun  6 21:05:35 2023 - ERROR - failed to execute the case.
+ exit 2
+ post_test
+ LOG_INFO 'Start to restore the test environment.'
+ message='Start to restore the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'Start to restore the test environment.'
Tue Jun  6 21:05:36 2023 - INFO  - Start to restore the test environment.
+ clear_env
+ DNF_REMOVE
+ node=1
+ pkg_list=
+ mode=0
+ [[ -z '' ]]
+ [[ -z '' ]]
+ LOG_WARN 'no thing to do.'
+ message='no thing to do.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level warn --message 'no thing to do.'
Tue Jun  6 21:05:38 2023 - WARN  - no thing to do.
+ return 0
++ ls
++ grep -vE '.sh|.java|.xml|expect_result|main|test'
+ rm -rf
+ LOG_INFO 'End to restore the test environment.'
+ message='End to restore the test environment.'
+ python3 /root/mugen-riscv/libs/locallibs/mugen_log.py --level info --message 'End to restore the test environment.'
Tue Jun  6 21:05:40 2023 - INFO  - End to restore the test environment.
